# CHANGELOG # cjw_newsletter # - YYYYMMDD Description #

- 20101001 (felix) cjw_newsletter '1.0.0beta2' moving to public github

1.0.0rc2
========
- fixed bug #017924: CJW Newsletter - textmail creation is sometimes broken
- fixed bug #017926: CJW Newsletter - textmail some unwanted newlines in headlines
- fixed bug #017624: CJW Newsletter - The subscription form's Cancel button does not work